<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_text_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scroll_view_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_remind_re_enable"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_cmdargs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/string_text_cmdargs"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_text_desc"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_explain_local_encryption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_explain_local_encryption"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/linearlayout_cmdargs"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#303030"
                        android:backgroundTint="#303030"
                        android:text="@string/string_add_arg"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_add_one_or_two_args"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/text_file_entries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:text="@string/string_text_file_entries"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_files_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_text_files_reminder"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FF0000"/>

                <LinearLayout
                    android:id="@+id/linearlayout_files"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_new_file_name"
                        android:imeOptions="actionDone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:ems="6"
                        android:gravity="start"
                        android:hint="@string/new_file_name_hint"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/button_add_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#303030"
                        android:backgroundTint="#303030"
                        android:text="@string/string_add_file"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout_legacyCfg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16sp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_text_legacyCfg"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_text_legacyCfg_desc"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textSize="20sp"/>
                    <EditText
                        android:id="@+id/editText_legacyCfg"
                        android:imeOptions="actionDone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:inputType="text"
                        android:enabled="false"/>
                    <Button
                        android:id="@+id/button_revert_to_legacy_config"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#303030"
                        android:backgroundTint="#303030"
                        android:text="@string/revert_to_legacy_config"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:enabled="false"
                        android:clickable="false"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>